conda-index/Linux-release-Py3.7-parallel/data/attachments/f82b48d524ec05f0.txt
2023-01-06T15:28:58 Subdir: linux-64 Gathering repodata
2023-01-06T15:28:58 linux-64 Writing pre-patch repodata
2023-01-06T15:28:58 linux-64 Applying patch instructions
2023-01-06T15:28:58 linux-64 Writing patched repodata
2023-01-06T15:28:58 linux-64 Building current_repodata subset
2023-01-06T15:28:58 linux-64 Writing current_repodata subset
2023-01-06T15:28:58 linux-64 Writing index HTML
2023-01-06T15:28:58 Subdir: noarch Gathering repodata
2023-01-06T15:28:58 noarch Writing pre-patch repodata
2023-01-06T15:28:58 noarch Applying patch instructions
2023-01-06T15:28:58 noarch Writing patched repodata
2023-01-06T15:28:58 noarch Building current_repodata subset
2023-01-06T15:28:58 noarch Writing current_repodata subset
2023-01-06T15:28:58 noarch Writing index HTML
  File "f2_bad.py", line 1
    I am a bad file that should not pass compileall.
       ^
SyntaxError: invalid syntax

2023-01-06T15:29:31 Subdir: linux-64 Gathering repodata
2023-01-06T15:29:31 linux-64 Writing pre-patch repodata
2023-01-06T15:29:31 linux-64 Applying patch instructions
2023-01-06T15:29:31 linux-64 Writing patched repodata
2023-01-06T15:29:31 linux-64 Building current_repodata subset
2023-01-06T15:29:31 Subdir: noarch Gathering repodata
2023-01-06T15:29:31 noarch Writing pre-patch repodata
2023-01-06T15:29:31 noarch Applying patch instructions
2023-01-06T15:29:31 noarch Writing patched repodata
2023-01-06T15:29:31 noarch Building current_repodata subset
2023-01-06T15:29:31 noarch Writing current_repodata subset
2023-01-06T15:29:31 noarch Writing index HTML
2023-01-06T15:29:31 linux-64 Writing current_repodata subset
2023-01-06T15:29:31 linux-64 Writing index HTML
